cabal-version:      3.0
name:               example-server
version:            0.1
synopsis:           Example server to showcase request tracking
-- description:
license:            MIT
license-file:       LICENSE
author:             Nick
maintainer:         nick@typeable.io
category:           Web
build-type:         Simple

common warnings
    ghc-options: -Wall

executable example-server
    import:           warnings
    main-is:          Main.hs
    build-depends:    base >=4.16 && <5,
                      http-client,
                      request-track,
                      request-track-servant,
                      servant,
                      servant-server,
                      thread-local,
                      wai,
                      warp >= 3.3
    hs-source-dirs:   src
    default-language: GHC2021
